# AudioStop

./: .gitignore  LICENSE  README.md  build-installer.bat  cep.config.ts  installer.nsi  package.json  requirements.txt
src/: Cargo.toml  audio_control_server.py  audio_control_server.spec  list_audio_apps.py  list_audio_sessions.py
src/js/background/: background.js  index.html
src/js/lib/utils/: config.ts  constants.ts  index.ts  logger.ts  types.ts  useTimelineMonitor.ts  useWebSocket.ts  version.ts
src/js/main/: index.html  index.js  main.tsx  server copy.rs  server.rs
src/js/main/components/: AppSelector.tsx  ConnectionIndicator.tsx  ErrorBoundary.tsx  StatusCard.tsx  index.ts
