[package]
name = "audio_control_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
log = "0.4"
windows = { version = "0.48", features = [
    "Win32_Foundation", 
    "Win32_System_Com", 
    "Win32_Media_Audio", 
    "Win32_System_Com_StructuredStorage"
]}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"



[[bin]]
name = "audio_control_server"
path = "js/main/server.rs"
